# AI-VISTA

./: README.md  app.js  app.py  generator.py  gui.py  index.html  loader.py  requirements.txt  server.py  styles.css  tempCodeRunnerFile.py
rust_optimizer/: Cargo.toml
rust_optimizer/src/: main.rs
settings/: settings.json  settings.py
